2007-07-18  Ben Motmans <ben.motmans@gmail.com>

	* SqliteSchemaProvider.cs: SupportsSchemaOperation implementation, use of strongly typed
	collections, Drop* and Rename* implementations

2007-07-17  Ben Motmans <ben.motmans@gmail.com>

	* Makefile.am: initial makefile
	* SqliteDbFactory.cs: implemented methods required for the connection settings dialog

2007-07-15  Ben Motmans <ben.motmans@gmail.com>

	* SqliteDialect.cs: dialect implementation with keyword detection
	* SqliteDbFactory.cs: use SqliteDialect instead of the obsolete Sql99Dialect

2007-07-14  Ben Motmans <ben.motmans@gmail.com>

	* SqliteConnectionProvider.cs, SqliteDbFactory.cs, SqliteSchemaProvider.cs: small changes
	to reflect API changes
	* SqlitePooledDbConnection.cs: implementation of ConnectionPool aware connection

2007-07-10  Ben Motmans <ben.motmans@gmail.com>

	* SqliteConnectionProvider.cs: set IsConnectionError property

2007-07-05  Ben Motmans <ben.motmans@gmail.com>

	* SqliteConnectionProvider.cs: ExecuteQueryAsDataSet and ExecuteQueryAsDataTable implementation
	* SqliteDbFactory.cs: specified the ISqlDialect and added default connection settings

2007-07-02  Ben Motmans <ben.motmans@gmail.com>

	* SqliteSchemaProvider.cs: 
	Imported the old DbProvider and updated all to code to use the new API

2007-07-01  Ben Motmans <ben.motmans@gmail.com>

	* SqliteSchemaProvider.cs: 
	* SqliteDbFactory.cs: 
	* SqliteConnectionProvider.cs: 
	Imported original code and splitted in 3 classes